feat: retrive stock opname
